[project]
name = "lora-simulation"
version = "0.0.1"
description = "LoRa physical layer"
authors = [{name = "Shkoropad Yurii",  email = "lvivgeorg@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
  "pytest>=8.0",
  "numpy>=2.3.5"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"