[project]
name = "lora-simulation-model"
version = "0.0.1"
description = "LoRa Simulation Model"
authors = [{name = "Shkoropad Yurii",  email = "lvivgeorg@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
  "pytest>=8.0",
  "numpy>=2.3.5"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
